@@ -35,5 +35,5 @@ libcompatos_a_SOURCES = ../unix/dir.c \
 			../unix/timer.c \
 			../unix/tuntap.c
 
-INCLUDES = @GLIB_CFLAGS@ @GTK_CFLAGS@ @LIBSPEC_CFLAGS@ \
+AM_CPPFLAGS += @GLIB_CFLAGS@ @GTK_CFLAGS@ @LIBSPEC_CFLAGS@ \
 -DFUSEDATADIR="\"${pkgdatadir}\""
