@@ -34,4 +34,4 @@ libcompatos_a_SOURCES = ../unix/dir.c \
 			../unix/timer.c \
                         ../unix/tuntap.c
 
-INCLUDES = @GLIB_CFLAGS@ @GTK_CFLAGS@ @LIBSPEC_CFLAGS@
+AM_CPPFLAGS += @GLIB_CFLAGS@ @GTK_CFLAGS@ @LIBSPEC_CFLAGS@
